# C-Macro-Collections

./: CMakeLists.txt
benchmarks/: CMakeLists.txt
examples/: CMakeLists.txt
examples/deque/: CMakeLists.txt
examples/hashmap/: CMakeLists.txt
examples/hashset/: CMakeLists.txt
examples/heap/: CMakeLists.txt
examples/iterators/: CMakeLists.txt
examples/list/: CMakeLists.txt
examples/multimap/: CMakeLists.txt
examples/multiset/: CMakeLists.txt
examples/others/: CMakeLists.txt
examples/others/separate_header_source/: CMakeLists.txt
examples/queue/: CMakeLists.txt
examples/stack/: CMakeLists.txt
examples/treemap/: CMakeLists.txt
examples/treeset/: CMakeLists.txt
src/: macro_collections.h
tests/main/: CMakeLists.txt
