
function(add_example NAME SRC)
    set(EX_NAME ex_${NAME})
    add_executable(${EX_NAME} ${SRC})
    target_include_directories(${EX_NAME} PUBLIC ${CMC_INCLUDE})
endfunction()

add_subdirectory(deque)
add_subdirectory(hashmap)
add_subdirectory(hashset)
add_subdirectory(heap)
add_subdirectory(iterators)
add_subdirectory(linkedlist)
add_subdirectory(list)
add_subdirectory(multimap)
add_subdirectory(multiset)
add_subdirectory(others)
add_subdirectory(queue)
add_subdirectory(stack)
add_subdirectory(treemap)
add_subdirectory(treeset)

add_example(hanoi hanoi.c)
add_example(printer printer.c)
